tests/neg/objects/obj-09.ts

/*@ obj :: { 
    x: [Immutable] number; 
    y: { number | v = this.x }; 
  } */
var obj = { x: 2, y: 1 };

